test/e2e/testdata/preserve-case.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: preserve-case
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: same-namespace
  http1:
    preserveHeaderCase: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: preserve-case
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /preserve
      backendRefs:
        - name: fasthttp-backend
          port: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preserve-case
  namespace: gateway-conformance-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: preserve-case
  template:
    metadata:
      labels:
        app: preserve-case
    spec:
      containers:
        - name: preserve-case
          image: envoyproxy/gateway-preserve-case-backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fasthttp-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: preserve-case
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
